// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test UserInformation Component Test UserInformation Component with missing fields 1`] = `
<div
  className="UserInformationStyled__UserInfoContainer-sc-1blzddj-0 jenztY"
>
  <div
    className="sc-AxjAm jhiTqR"
  >
    <img
      className="sc-AxirZ fZpmTJ"
      src="https://github.githubassets.com/images/modules/logos_page/Octocat.png"
    />
  </div>
  <div
    className="UserInformationStyled__DetailsContainer-sc-1blzddj-1 kmhjpF"
  >
    <div
      className="UserInformationStyled__UserName-sc-1blzddj-2 cWlipe"
    >
      Frank Johnson
    </div>
    <div
      className="UserInformationStyled__UsernameContainer-sc-1blzddj-3 kVUCfQ"
    >
      <a
        className="UserInformationStyled__ProfileUrl-sc-1blzddj-4 eUbYqi"
        href="https://github.com/"
      />
    </div>
    <div
      className="UserInformationStyled__DetailTilesContainer-sc-1blzddj-6 cvHTUm"
    >
      <div
        className="sc-AxiKw lmEmTk"
      >
        <div
          className="sc-AxhCb bBcDsF"
        >
          Following
        </div>
        <div
          className="sc-AxhUy kMyssT"
        />
      </div>
      <div
        className="sc-AxiKw lmEmTk"
      >
        <div
          className="sc-AxhCb bBcDsF"
        >
          Followers
        </div>
        <div
          className="sc-AxhUy kMyssT"
        />
      </div>
    </div>
    <div
      className="UserInformationStyled__DetailTilesContainer-sc-1blzddj-6 cvHTUm"
    >
      <div
        className="sc-AxiKw lmEmTk"
      >
        <div
          className="sc-AxhCb bBcDsF"
        >
          Location
        </div>
        <div
          className="sc-AxhUy kMyssT"
        >
          Arizona
        </div>
      </div>
    </div>
    <div
      className="UserInformationStyled__DetailTilesContainer-sc-1blzddj-6 cvHTUm"
    >
      <div
        className="sc-AxiKw lmEmTk"
      >
        <div
          className="sc-AxhCb bBcDsF"
        >
          Repos
        </div>
        <div
          className="sc-AxhUy kMyssT"
        >
          10
        </div>
      </div>
      <div
        className="sc-AxiKw lmEmTk"
      >
        <div
          className="sc-AxhCb bBcDsF"
        >
          Gitsts
        </div>
        <div
          className="sc-AxhUy kMyssT"
        >
          0
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test UserInformation Component renders correctly 1`] = `
<div
  className="UserInformationStyled__UserInfoContainer-sc-1blzddj-0 jenztY"
>
  <div
    className="sc-AxjAm jhiTqR"
  >
    <img
      className="sc-AxirZ fZpmTJ"
      src="https://github.githubassets.com/images/modules/logos_page/Octocat.png"
    />
  </div>
  <div
    className="UserInformationStyled__DetailsContainer-sc-1blzddj-1 kmhjpF"
  >
    <div
      className="UserInformationStyled__UserName-sc-1blzddj-2 cWlipe"
    >
      Frank Johnson
    </div>
    <div
      className="UserInformationStyled__UsernameContainer-sc-1blzddj-3 kVUCfQ"
    >
      <a
        className="UserInformationStyled__ProfileUrl-sc-1blzddj-4 eUbYqi"
        href="https://github.com/"
      />
    </div>
    <div
      className="UserInformationStyled__BioContainer-sc-1blzddj-5 jdXPTn"
    >
      users bio
    </div>
    <div
      className="UserInformationStyled__DetailTilesContainer-sc-1blzddj-6 cvHTUm"
    >
      <div
        className="sc-AxiKw lmEmTk"
      >
        <div
          className="sc-AxhCb bBcDsF"
        >
          Following
        </div>
        <div
          className="sc-AxhUy kMyssT"
        />
      </div>
      <div
        className="sc-AxiKw lmEmTk"
      >
        <div
          className="sc-AxhCb bBcDsF"
        >
          Followers
        </div>
        <div
          className="sc-AxhUy kMyssT"
        />
      </div>
    </div>
    <div
      className="UserInformationStyled__DetailTilesContainer-sc-1blzddj-6 cvHTUm"
    >
      <div
        className="sc-AxiKw lmEmTk"
      >
        <div
          className="sc-AxhCb bBcDsF"
        >
          Location
        </div>
        <div
          className="sc-AxhUy kMyssT"
        >
          Arizona
        </div>
      </div>
      <div
        className="sc-AxiKw lmEmTk"
      >
        <div
          className="sc-AxhCb bBcDsF"
        >
          Blog
        </div>
        <div
          className="sc-AxhUy kMyssT"
        >
          <a
            className="UserInformationStyled__BlogUrl-sc-1blzddj-7 gkdhrO"
            href="https://github.com/"
          >
            https://github.com/
          </a>
        </div>
      </div>
    </div>
    <div
      className="UserInformationStyled__DetailTilesContainer-sc-1blzddj-6 cvHTUm"
    >
      <div
        className="sc-AxiKw lmEmTk"
      >
        <div
          className="sc-AxhCb bBcDsF"
        >
          Repos
        </div>
        <div
          className="sc-AxhUy kMyssT"
        >
          10
        </div>
      </div>
      <div
        className="sc-AxiKw lmEmTk"
      >
        <div
          className="sc-AxhCb bBcDsF"
        >
          Gitsts
        </div>
        <div
          className="sc-AxhUy kMyssT"
        >
          0
        </div>
      </div>
    </div>
  </div>
</div>
`;
